--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMIBXvrtYOiv/ToiFAY1vjg",
+      "authorship_tag": "ABX9TyMBgEKQvAwvz/+fiNxpgi3b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1716,10 +1716,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "DoppkUDGfF7C",
-        "outputId": "94823d45-b97b-4a9f-a71b-a736c9193a02",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "94823d45-b97b-4a9f-a71b-a736c9193a02"
       },
       "source": [
         "import numpy as np\n",
@@ -1742,10 +1742,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "3BUv3ygpf4rH",
-        "outputId": "6d740d61-b37f-4fad-c9b1-7870077f5f6d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6d740d61-b37f-4fad-c9b1-7870077f5f6d"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -1774,10 +1774,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "TJ1DijnqgAHr",
-        "outputId": "ed5d6804-0826-469d-fec7-3df6bf458f93",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ed5d6804-0826-469d-fec7-3df6bf458f93"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -1806,10 +1806,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Y0QS90DogHM8",
-        "outputId": "05caf85c-5c0a-43ea-f671-c78cea23980d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "05caf85c-5c0a-43ea-f671-c78cea23980d"
       },
       "source": [
         "print(np.base_repr(5,2))\n",
@@ -1840,10 +1840,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "JV2gT3iagztB",
-        "outputId": "86abc8df-075c-40e6-f6f9-c5b18a3313d2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "86abc8df-075c-40e6-f6f9-c5b18a3313d2"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -1872,10 +1872,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "snL3f-Vrg5jt",
-        "outputId": "35163507-97a4-4367-f468-580fa4d8a378",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "35163507-97a4-4367-f468-580fa4d8a378"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -1904,10 +1904,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "llvccZAOBmoX",
-        "outputId": "30477aeb-6b7b-4b06-dae7-5220ca1d62c2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "30477aeb-6b7b-4b06-dae7-5220ca1d62c2"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -1938,10 +1938,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "r995sRAhBrIa",
-        "outputId": "181a77e5-5c41-458a-e530-e80eeb954a2f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "181a77e5-5c41-458a-e530-e80eeb954a2f"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -1961,10 +1961,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "-iqkU708CLAj",
-        "outputId": "a607f6d4-25df-4989-fd1a-74a493045e7e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a607f6d4-25df-4989-fd1a-74a493045e7e"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -1995,10 +1995,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "SJR6YJUbCU_o",
-        "outputId": "03157866-cd5d-40ec-9e0e-82d80b8492f8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "03157866-cd5d-40ec-9e0e-82d80b8492f8"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -2018,10 +2018,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "O8rjyAcwCzW5",
-        "outputId": "37bb6bbd-45b3-4c25-fd8f-3122ffbae533",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "37bb6bbd-45b3-4c25-fd8f-3122ffbae533"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -2050,10 +2050,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "bN8osuBqC8Oe",
-        "outputId": "62702310-d283-4fbc-f0c7-a1c202f8cd96",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "62702310-d283-4fbc-f0c7-a1c202f8cd96"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -2082,10 +2082,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Fwhtd7A5Dn6V",
-        "outputId": "1eb5bb02-2bbf-4129-8789-34f93dc1017a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1eb5bb02-2bbf-4129-8789-34f93dc1017a"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -2114,10 +2114,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "tFZQBolJDn6V",
-        "outputId": "dfecd425-32f6-4ce8-df47-b5344a833586",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dfecd425-32f6-4ce8-df47-b5344a833586"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -2137,10 +2137,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "FYU0N2D1aO1t",
-        "outputId": "dbf0775e-7a72-4b47-fefc-73951a182ac9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dbf0775e-7a72-4b47-fefc-73951a182ac9"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -2169,10 +2169,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "OvPgFoaHaTin",
-        "outputId": "9f0797e2-302c-471a-e4a2-c093ea015c80",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9f0797e2-302c-471a-e4a2-c093ea015c80"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -2192,10 +2192,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "N3yk1iHVaYc0",
-        "outputId": "41ef449c-ae63-4375-d3e7-2d8558b62f1a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "41ef449c-ae63-4375-d3e7-2d8558b62f1a"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -2225,10 +2225,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "iOu-_DX2akcc",
-        "outputId": "7a12c2c3-b55d-4597-8bfa-4a337780f176",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7a12c2c3-b55d-4597-8bfa-4a337780f176"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -2248,10 +2248,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "7Bk6CAf-bGft",
-        "outputId": "ac709d96-f474-4e77-c18e-bfeddc9a83a2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ac709d96-f474-4e77-c18e-bfeddc9a83a2"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -2283,10 +2283,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ncf-dL8fljoH",
-        "outputId": "a26b01ef-aa47-4646-8cb4-9d153cc224b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a26b01ef-aa47-4646-8cb4-9d153cc224b0"
       },
       "source": [
         "!g++ temp.cpp; echo Abraham Lincoln | ./a.out"
@@ -2331,10 +2331,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "sq9Q97KdKH-M",
-        "outputId": "a8748e86-8f3c-4e8c-8d90-accf883a963e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a8748e86-8f3c-4e8c-8d90-accf883a963e"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -2362,10 +2362,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "zHB4UpcbKTGP",
-        "outputId": "e942d11b-2c26-4a33-f9d1-0e6b41826ccd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e942d11b-2c26-4a33-f9d1-0e6b41826ccd"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -2391,18 +2391,13 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "xf1SC37CCp7e"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "DqYJWTLfTHA0"
+        "id": "DqYJWTLfTHA0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "681863ce-799f-496a-c391-44180342e88a"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -2414,24 +2409,48 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 99,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "m-Q7U_LkTPSy"
+        "id": "m-Q7U_LkTPSy",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1647f9bc-531c-4184-c321-744306cb1918"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qUNsklXVUExb"
+        "id": "qUNsklXVUExb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d915c54c-df83-4a6a-a0bf-f666737cbe0a"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -2446,24 +2465,50 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2supEKMcUJyx"
+        "id": "2supEKMcUJyx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ade1e953-fc0d-4f77-da4b-f7992a4c0622"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "8\n",
+            "3\n",
+            "0.693147\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Qt_Q18TOUu1r"
+        "id": "Qt_Q18TOUu1r",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "11bb9e73-0f74-4d1f-a593-b30d9f32d1da"
       },
       "source": [
         "# python による検証\n",
@@ -2479,8 +2524,19 @@
         "print(math.log(2, math.exp(1)))\n",
         "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1.999855907188195\n",
+            "2.718281828459045\n",
+            "0.6931471805599453\n",
+            "0.6931471805599453\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2494,7 +2550,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5efZAImnB0ZC"
+        "id": "5efZAImnB0ZC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fead9f5f-336a-42bc-c642-1b83d63c5320"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -2520,19 +2580,60 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zi6mNxxCB0ZF"
+        "id": "zi6mNxxCB0ZF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8e2ad71d-3bc1-4a11-d520-dec636e40c74"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 105,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "4\n",
+            "2.3\n",
+            "2.3\n",
+            "-2\n",
+            "-3\n",
+            "2.71828\n",
+            "1.71828\n",
+            "7\n",
+            "5\n",
+            "10.1\n",
+            "0.8\n",
+            "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vfL3Vly6H6Qt"
+      },
+      "source": [
+        "# いまここ"
+      ]
     },
     {
       "cell_type": "code",
