--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNOYxNoKJ5RrS4Ji/qwcPcK",
+      "authorship_tag": "ABX9TyNFKV1XHZWlt04daaeKK3wD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2630,10 +2630,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "oYYWPgYh74ob",
-        "outputId": "4f6eee62-1d36-4db9-c439-be357e954b29",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4f6eee62-1d36-4db9-c439-be357e954b29"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -2663,10 +2663,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "RhUYA2c-7_hz",
-        "outputId": "2ce89c36-137b-4321-c2e8-486283956966",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2ce89c36-137b-4321-c2e8-486283956966"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -2687,10 +2687,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "DW3WU3amjC16",
-        "outputId": "2bf1a081-083c-4f24-f9fd-c10fd36e46df",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2bf1a081-083c-4f24-f9fd-c10fd36e46df"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -2721,10 +2721,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "U-TeRyy3jElS",
-        "outputId": "c11fcc0d-6a3f-4928-d068-661ae22581d2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c11fcc0d-6a3f-4928-d068-661ae22581d2"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -2744,10 +2744,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "bl06solSjfo0",
-        "outputId": "627291f1-2f16-420e-9c35-389657f75a0f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "627291f1-2f16-420e-9c35-389657f75a0f"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -2779,10 +2779,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "lD_yDgDTjiKH",
-        "outputId": "dcff0986-b696-4cb8-fd3c-ac07b013710d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dcff0986-b696-4cb8-fd3c-ac07b013710d"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -2802,10 +2802,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "1qUuh5JSj4JZ",
-        "outputId": "a0c774fd-6e60-44a9-9735-2afce3eae653",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a0c774fd-6e60-44a9-9735-2afce3eae653"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -2839,10 +2839,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "WeNIRfvfj6km",
-        "outputId": "d5820c3d-5ffe-4bfc-9185-0a658873e1c3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d5820c3d-5ffe-4bfc-9185-0a658873e1c3"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -2862,10 +2862,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "16UgntYYkPkF",
-        "outputId": "5056d96c-7537-4387-cb94-5ed66b7b0ed6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5056d96c-7537-4387-cb94-5ed66b7b0ed6"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -2896,10 +2896,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "lhEkWQxbkW39",
-        "outputId": "96525613-eafa-4b93-fb73-4f11fa8c2823",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "96525613-eafa-4b93-fb73-4f11fa8c2823"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -2919,10 +2919,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "XcesfRGD7Zei",
-        "outputId": "40737910-9978-41e9-f89c-05a69610b657",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "40737910-9978-41e9-f89c-05a69610b657"
       },
       "source": [
         "# switch 構文\n",
@@ -2974,10 +2974,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "q729GEbV7e4R",
-        "outputId": "75aa4909-209e-44b8-ea7d-efce7fd09a29",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "75aa4909-209e-44b8-ea7d-efce7fd09a29"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -2997,10 +2997,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "O72WfBCMGWG-",
-        "outputId": "23b23572-4979-4665-8b5c-0c493f6d05a2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "23b23572-4979-4665-8b5c-0c493f6d05a2"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -3037,10 +3037,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "6C9d6okNGW5I",
-        "outputId": "ecd6cc39-917d-4490-f32a-26b9ea1f5493",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ecd6cc39-917d-4490-f32a-26b9ea1f5493"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -3060,10 +3060,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ihhwaJtn4JMD",
-        "outputId": "3b16e60b-5fc1-40ad-a927-9e42cb3f5b3e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3b16e60b-5fc1-40ad-a927-9e42cb3f5b3e"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -3094,10 +3094,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "zcOgtPoW4Jpz",
-        "outputId": "5c96394c-a8c8-413b-e036-a47330651c30",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5c96394c-a8c8-413b-e036-a47330651c30"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -3144,10 +3144,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "T5EZk3rj4dp_",
-        "outputId": "080e4bca-1acc-4cef-8e9b-2804bb900cdb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "080e4bca-1acc-4cef-8e9b-2804bb900cdb"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -3171,10 +3171,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "mekcQLVJ5C21",
-        "outputId": "a849ebb4-15a7-48d1-d2a2-2831e0381575",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a849ebb4-15a7-48d1-d2a2-2831e0381575"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -3203,10 +3203,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "vVMSUoTD5DWS",
-        "outputId": "49135a86-d971-4278-b3b1-1fd97d164699",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "49135a86-d971-4278-b3b1-1fd97d164699"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -3230,10 +3230,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "6B9Qb9kU5d75",
-        "outputId": "a9a8c7af-45be-4e67-fa78-4a4269e6663c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a9a8c7af-45be-4e67-fa78-4a4269e6663c"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -3262,10 +3262,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Xi5yv6sO5jx2",
-        "outputId": "c0b1851c-01ad-48a1-eca2-87bd674a4865",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c0b1851c-01ad-48a1-eca2-87bd674a4865"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -3290,10 +3290,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "tRiVBXFL2rnC",
-        "outputId": "210caf50-fb41-4838-e0e2-0f912aa4505c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "210caf50-fb41-4838-e0e2-0f912aa4505c"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -3325,10 +3325,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "holEDCC520Dk",
-        "outputId": "c802f6a3-a7f6-4396-90a6-210f4d5df61c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c802f6a3-a7f6-4396-90a6-210f4d5df61c"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -3355,15 +3355,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9F3ySpuh3pTw"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "ZZyfhNB1YqRL"
       },
       "source": [
@@ -3373,7 +3364,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qf_0WEWnl4yx"
+        "id": "qf_0WEWnl4yx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e1cc13c2-51ba-43ca-92f6-66d81bd054fe"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -3388,24 +3383,48 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "e3onRGAemAhi"
+        "id": "e3onRGAemAhi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "848e6dbe-417f-47a0-87c1-2ed533398a97"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Volvo"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JickdBaumMKJ"
+        "id": "JickdBaumMKJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f7bf715b-8385-4423-9581-b340a3e58508"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -3421,24 +3440,48 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xME08Ssamati"
+        "id": "xME08Ssamati",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dd4db798-e36c-40f8-cd18-14072f5c5b69"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Opel"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-8spDgtFmnW7"
+        "id": "-8spDgtFmnW7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8c2906b6-a7d5-4914-b8cb-91bd6de8877d"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -3455,24 +3498,51 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jy8wA-48mq-n"
+        "id": "jy8wA-48mq-n",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "48e6685f-8d66-4bf9-a354-36fe2cae5c5e"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Volvo\n",
+            "BMW\n",
+            "Ford\n",
+            "Mazda\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nJ5zPLrsm1z1"
+        "id": "nJ5zPLrsm1z1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f32fb753-dc8c-42cf-ba79-f47b1ec3a794"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -3488,24 +3558,51 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BVbo7l6km5T1"
+        "id": "BVbo7l6km5T1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "754d404d-d8d8-4f31-ebd1-951301c9f01f"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0: Volvo\n",
+            "1: BMW\n",
+            "2: Ford\n",
+            "3: Mazda\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Sy8xPThGnpbg"
+        "id": "Sy8xPThGnpbg",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c7bad451-0835-4d4f-ab42-32b70add25aa"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -3524,24 +3621,52 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GIVj0MYAnswK"
+        "id": "GIVj0MYAnswK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "63e6a06e-395c-4b4b-d91e-9d33a144a6bb"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Volvo\n",
+            "BMW\n",
+            "Ford\n",
+            "Mazda\n",
+            "Tesla\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OSU6Fsxqn5Rs"
+        "id": "OSU6Fsxqn5Rs",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "75ef114e-3155-49f8-ae2d-f4df422eee7d"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -3563,24 +3688,52 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "T7JATf7Kn9d2"
+        "id": "T7JATf7Kn9d2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c4b06815-2786-448b-932b-8183baf2f790"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Volvo\n",
+            "BMW\n",
+            "Ford\n",
+            "Mazda\n",
+            "Tesla\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-qrghEFlhYhu"
+        "id": "-qrghEFlhYhu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "eb85266b-83c3-49df-b109-829fc3c7e24c"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -3598,19 +3751,40 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KvsgcVGDhmRx"
+        "id": "KvsgcVGDhmRx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f3f14818-6fce-44f2-c169-0206dbb300e3"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Pizza\n",
+            "Pizza\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -3637,13 +3811,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2Ifs1iLiimEp"
+        "id": "2Ifs1iLiimEp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1120232a-6a38-40dc-855e-db5cc5d24c77"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0x7ffe35db17f0"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QildR7dn6uMB"
+      },
+      "source": [
+        "# いまここ"
+      ]
     },
     {
       "cell_type": "markdown",
