--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN0WSGladjLI2meFTpuU+aF",
+      "authorship_tag": "ABX9TyP/OPggNbbwjBun1rC4Epx4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4742,18 +4742,13 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "2K3CdX5uT6MG"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "2trXCKKNIoog"
+        "id": "2trXCKKNIoog",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "443b45c3-6df5-48a8-c415-8e407d62e574"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -4781,24 +4776,49 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing temp.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yPV_rnnII6h4"
+        "id": "yPV_rnnII6h4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b9881a4c-ad43-4860-d34d-f2a07e43b1ff"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "15\n",
+            "Some text"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SL2JLGn2JGAI"
+        "id": "SL2JLGn2JGAI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4174a895-0d4e-4c37-bf63-48d64e3604c4"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -4830,24 +4850,49 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing temp.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gsTqn1uXJFc7"
+        "id": "gsTqn1uXJFc7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "eb1353d6-9f96-477f-b44e-c34d8d13db9d"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "BMW X5 1999\n",
+            "Ford Mustang 1969\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "t5ziGTEKJYdX"
+        "id": "t5ziGTEKJYdX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ad5dff76-71d3-4561-9d42-ced21c2d2f91"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -4868,24 +4913,57 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kO8LjkheJYGQ"
+        "id": "kO8LjkheJYGQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7a4397fd-0712-4264-ef0e-feb828561a5f"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hello World!"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eS3USie9RsPv"
+      },
+      "source": [
+        "# いまここ"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FdehYAOxJ9hn"
+        "id": "FdehYAOxJ9hn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3957ebcc-ac05-411d-c119-20a79fb86826"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -4909,19 +4987,39 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hQWeWer7J9Xc"
+        "id": "hQWeWer7J9Xc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3bb2d524-9413-4c51-e904-49413d98ef14"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hello World!"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
